--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
+    "styled-normalize": "^8.0.7",
     "styled-system": "^5.1.5"
   },
   "scripts": {
