--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "babel-eslint": "^10.1.0",
     "framer-motion": "^1.10.3",
     "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "react": "^16.13.1",
