--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,29 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "apollo-server": "^2.12.0",
-    "apollo-server-express": "^2.12.0",
-    "bcrypt": "^4.0.1",
-    "cors": "^2.8.5",
+    "apollo-server-express": "^2.14.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "merge-graphql-schemas": "^1.7.8",
-    "pg": "^8.0.3",
-    "sequelize": "^5.21.7"
+    "graphql": "^15.0.0",
+    "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.0.0-rc.2",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.6",
+    "@types/graphql": "^14.5.0",
+    "@types/node": "^14.0.6",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
   },
   "scripts": {
-    "dev": "nodemon server",
-    "start": "node server"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon"
+  }
 }
