--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^1.10.3",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
