--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.1",
     "graphql": "^15.0.0",
     "ioredis": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.8",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
@@ -30,7 +31,10 @@
     "@types/express-session": "^1.17.0",
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.16.3",
+    "@types/jest": "^25.2.3",
     "@types/node": "^14.0.6",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
