--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "class-validator": "^0.12.2",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.0.0",
@@ -32,6 +33,7 @@
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.16.3",
     "@types/jest": "^25.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.6",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0",
