--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
     "connect-redis": "^4.0.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.14",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
