--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
-    "apollo-client": "^2.6.8",
     "apollo-link-context": "^1.0.20",
     "babel-eslint": "^10.1.0",
     "framer-motion": "^1.10.3",
@@ -20,7 +19,6 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -34,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,10 +51,15 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.15.0",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.18"
+    "@storybook/react": "^5.3.18",
+    "@types/graphql": "^14.5.0",
+    "@graphql-codegen/typescript": "1.15.0",
+    "@graphql-codegen/typescript-operations": "1.15.0",
+    "@graphql-codegen/typescript-react-apollo": "1.15.0"
   }
 }
