--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0",
@@ -65,6 +66,7 @@
     "@storybook/react": "^5.3.18",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/react-router": "^5.1.7",
     "@types/styled-components": "^5.1.0",
     "@types/styled-system": "^5.1.9"
   }
