--- a/client/package.json
+++ b/client/package.json
@@ -7,23 +7,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^25.2.3",
-    "@types/lodash": "^4.14.154",
-    "@types/node": "^14.0.6",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
     "apollo-boost": "^0.4.7",
     "apollo-link-token-refresh": "^0.3.1",
     "babel-eslint": "^10.1.0",
     "framer-motion": "^1.11.0",
     "graphql": "^15.0.0",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "slate": "^0.58.3",
+    "slate-react": "^0.58.3",
     "styled-components": "^5.1.0",
     "styled-normalize": "^8.0.7",
     "styled-system": "^5.1.5",
@@ -64,8 +58,15 @@
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^26.0.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/slate": "^0.47.7",
+    "@types/slate-react": "^0.22.9",
     "@types/styled-components": "^5.1.0",
     "@types/styled-system": "^5.1.9"
   }
