--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
     "apollo-link-token-refresh": "^0.3.1",
+    "apollo-link-ws": "^1.0.20",
     "babel-eslint": "^10.1.0",
     "framer-motion": "^1.11.0",
     "graphql": "^15.0.0",
@@ -21,6 +24,7 @@
     "styled-components": "^5.1.0",
     "styled-normalize": "^8.0.7",
     "styled-system": "^5.1.5",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.9.3"
   },
   "scripts": {
