--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^1.11.0",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
