--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "babel-eslint": "^10.1.0",
     "framer-motion": "^1.11.0",
     "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
