fixed tsconfig and package.json

--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
   },
   "scripts": {
     "start": "ts-node src/server.ts",
-    "dev": "ts-node-dev --respawn src/server.ts"
+    "dev": "ts-node-dev --respawn src/server.ts",
+    "build": "tsc -b"
   }
 }
