--- a/server/ormconfig.docker.json
+++ b/server/ormconfig.docker.json
@@ -1,6 +1,6 @@
 {
   "type": "postgres",
-  "host": "172.21.0.3",
+  "host": "db",
   "port": 5432,
   "username": "postgres",
   "password": "postgres",
