--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     networks:
       - slack
     volumes:
-      - ./server:/app
+      - ./server:/root
     env_file:
       - prod.env
   redis:
@@ -43,7 +43,6 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - app/node_modules
       - ./client:/app
     stdin_open: true
 
