--- a/mysite.template
+++ b/mysite.template
@@ -1,5 +1,8 @@
 server {
-    location / {
+    location /graphql {
         proxy_pass http://server:4000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
