--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t kokiebisu/slack -f dev.Dockerfile ./server
+  - docker build -t kokiebisu/slack -f Dockerfile.dev server
 
 script:
   - docker run -e CI=true kokiebisu/slack npm run test -- --coverage
