--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ deploy:
   bucket_path: 'slack test server'
   on:
     branch: master
-# access_key_id: $key
-#secret_access_key: $
+  access_key_id: $AWS_SECRET_KEY
+  secret_access_key:
+    secure: '$SECRET_ACCESS_KEY'
