--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     image: postgres:latest
     environment:
       - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=slack-server
+      - POSTGRES_PORT=5432
   redis:
     image: redis:latest
   server:
@@ -13,27 +16,24 @@ services:
     volumes:
       - /app/node_modules
       - ./server:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - POSTGRES_USER=postgres
+      - POSTGRES_HOST=db
+      - POSTGRES_DB=slack-server
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PORT=5432
+    ports:
+      - 4000:4000
   client:
     build:
       context: ./client
-      dockerfile: Dockerfile
-    networks:
-      - slack
+      dockerfile: dev.Dockerfile
     ports:
-      - '3000:3000'
+      - 3000:3000
     volumes:
+      - /app/node_modules
       - ./client:/app
-    stdin_open: true
-  nginx:
-    image: nginx
-    volumes:
-      - ./mysite.template:/etc/nginx/conf.d/mysite.template
-    ports:
-      - '8081:80'
-    command: /bin/bash -c "envsubst < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
-    networks:
-      - slack
-    depends_on:
-      - server
 volumes:
   database_postgres:
