--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,19 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=slack-server
+      - POSTGRES_DB=slackdb
       - POSTGRES_PORT=5432
+    ports:
+      - 5432:5432
+    networks:
+      - slack
   redis:
     image: redis:latest
-  server:
+    ports:
+      - 6379:6379
+    networks:
+      - slack
+  api:
     build:
       context: ./server
       dockerfile: dev.Dockerfile
@@ -21,11 +29,16 @@ services:
       - REDIS_PORT=6379
       - POSTGRES_USER=postgres
       - POSTGRES_HOST=db
-      - POSTGRES_DB=slack-server
+      - POSTGRES_DB=slackdb
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_PORT=5432
     ports:
       - 4000:4000
+    depends_on:
+      - db
+      - redis
+    networks:
+      - slack
   client:
     build:
       context: ./client
@@ -35,5 +48,11 @@ services:
     volumes:
       - /app/node_modules
       - ./client:/app
+    networks:
+      - slack
 volumes:
   database_postgres:
+
+networks:
+  slack:
+    driver: bridge
