--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,19 @@
 upstream client {
-    server client:3000
+    server client:3000;
 }
 
-upstream server {
-    server server:4000
+upstream api {
+    server api:4000;
+}
+
+server {
+    listen 80;
+
+    location / {
+        proxy_pass http://client;
+    }
+
+    location /graphql {
+        proxy_pass http://api;
+    }
 }
