refactored docker compose into using nginx for development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.7'
 services:
-  # nginx:
-  #   restart: always
-  #   build:
-  #     context: ./nginx
-  #     dockerfile: dev.Dockerfile
-  #   ports:
-  #     - 8080:80
-  #   depends_on:
-  #     - client
-  #     - api
+  nginx:
+    restart: always
+    build:
+      context: ./nginx
+      dockerfile: dev.Dockerfile
+    ports:
+      - 8080:80
+    depends_on:
+      - client
+      - api
   db:
     image: postgres:latest
     environment:
@@ -37,13 +37,13 @@ services:
     depends_on:
       - db
       - redis
-  # client:
-  #   build:
-  #     context: ./client
-  #     dockerfile: dev.Dockerfile
-  #   stdin_open: true
-  #   volumes:
-  #     - /app/node_modules
-  #     - ./client:/app
+  client:
+    build:
+      context: ./client
+      dockerfile: dev.Dockerfile
+    stdin_open: true
+    volumes:
+      - /app/node_modules
+      - ./client:/app
 volumes:
   database_postgres:
