--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t kokiebisu/slack-test -f ./client/dev.Dockerfile ./client
 
 script:
-  - docker run -e CI=true kokiebisu/slack-client yarn test -- --coverage
+  - docker run -e CI=true kokiebisu/slack-test yarn test -- --coverage
 
 after_success:
   - docker build -t kokiebisu/slack-client ./client
