--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,5 @@ deploy:
   bucket_path: slack
   on:
     branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key:
-      secure: $AWS_SECRET_KEY
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
