--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ after_success:
   - docker build -t kokiebisu/slack-client ./client
   - docker build -t kokiebisu/slack-nginx ./nginx
   - docker build -t kokiebisu/slack-server ./server
-  # login
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  # push to docker hub
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push kokiebisu/slack-client
   - docker push kokiebisu/slack-nginx
   - docker push kokiebisu/slack-server
