--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:alpine as builder
 WORKDIR /app
 COPY package.json .
-COPY ormconfig.js .
 RUN yarn
 COPY . .
 RUN yarn build
@@ -10,5 +9,5 @@ FROM node:alpine
 WORKDIR /app
 COPY --from=builder /app/dist .
 COPY --from=builder /app/ormconfig.js .
-COPY --from=builder /app/config.js .
+RUN ls -a
 CMD ["node src/server"]
