--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,10 +3,8 @@ WORKDIR /app
 COPY ./package.json .
 RUN yarn
 COPY . .
-RUN ls -a
 RUN yarn build
 
 FROM nginx
 EXPOSE 3000
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/build /app
