--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,4 +7,5 @@ RUN yarn build
 
 FROM nginx
 EXPOSE 3000
-COPY --from=builder /app/build /app
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/build /usr/share/nginx/html
