readded docker-compose

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:alpine as builder
 WORKDIR /app
 COPY ./package.json .
-RUN yarn
+RUN npm install
 COPY . .
-RUN yarn build
+RUN npm run build
 
 FROM node:alpine
 WORKDIR /app
 COPY package.json ./
-RUN yarn
+RUN npm install
 
 COPY --from=builder /app/dist .
 
@@ -16,4 +16,4 @@ COPY ormconfig.js ./
 
 EXPOSE 4000
 
-CMD node src/server.js
+CMD node ./src/server.js
