--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - docker build -t kokiebisu/slack-test -f ./client/dev.Dockerfile ./client
 
 script:
-  - docker run -e CI=true kokiebisu/slack-test yarn test -- --coverage
+  - docker run -e CI=true kokiebisu/slack-test yarn test
 # after_success:
 #   - docker build -t kokiebisu/slack-client ./client
 #   - docker build -t kokiebisu/slack-nginx ./nginx
