--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash -s -- --disable-prompts > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
-  - gcloud components update kubectl
+  - gcloud components install kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project slack-283301
   - gcloud config set compute/zone us-west1-a
