--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ sudo: required
 services:
   - docker
 
+env:
+  global:
+    - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
-  - gcloud components install kubectl
+  - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project slack-283301
   - gcloud config set compute/zone us-west1-a
@@ -24,3 +28,9 @@ script:
 
 #   - docker push kokiebisu/slack-client
 #   - docker push kokiebisu/slack-server
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
