--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,5 +15,8 @@ server {
 
   location /graphql {
     proxy_pass http://api;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 }
