--- a/kubernetes/ingress-service.yaml
+++ b/kubernetes/ingress-service.yaml
@@ -4,10 +4,10 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: 'nginx'
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-   proxy_http_version 1.1;
-   proxy_set_header Upgrade "websocket";
-   proxy_set_header Connection "Upgrade";
+  #   nginx.ingress.kubernetes.io/configuration-snippet: |
+  #  proxy_http_version 1.1;
+  #  proxy_set_header Upgrade "websocket";
+  #  proxy_set_header Connection "Upgrade";
 spec:
   rules:
     - http:
