--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-REACT_APP_SERVER_URL_DEVELOPMENT=http://34.105.56.225/graphql
-REACT_APP_SERVER_URL_PRODUCTION=http://34.105.56.225/graphql
-REACT_APP_SERVER_WEBSOCKET_DEVELOPMENT=ws://34.105.56.225/graphql
-REACT_APP_SERVER_WEBSOCKET_PRODUCTION=ws://34.105.56.225/graphql
+REACT_APP_SERVER_URL_DEVELOPMENT=http://localhost:3050/graphql
+REACT_APP_SERVER_URL_PRODUCTION=http://localhost:3050/graphql
+REACT_APP_SERVER_WEBSOCKET_DEVELOPMENT=ws://localhost:3050/graphql
+REACT_APP_SERVER_WEBSOCKET_PRODUCTION=ws://localhost:3050/graphql
