modified dockerfile for client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine as builder
 WORKDIR /app
 COPY ./package.json .
 USER node
-RUN yarn cache clean && sudo yarn --update-checksums
+RUN yarn cache clean
 COPY . .
 RUN yarn && yarn build
 
