--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,14 +6,11 @@ COPY . .
 RUN yarn build
 
 FROM node:alpine
-WORKDIR /app
-COPY package.json ./
-RUN yarn
-
+WORKDIR /usr/app
 COPY --from=builder /app/dist .
 
 COPY ormconfig.js ./
 
 EXPOSE 4000
 
-CMD node ./src/server.js
+CMD ["node", "./src/server.js"]
