--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,10 @@
 FROM node:alpine as builder
 WORKDIR /app
 COPY ./package.json .
-RUN yarn cache clean
 COPY . .
 RUN yarn && yarn build
 
 FROM nginx:1.17-alpine
-EXPOSE 3000
+WORKDIR /usr/share/nginx/html
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/build .
