--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,15 +1,18 @@
 FROM node:alpine as builder
 WORKDIR /app
-COPY ./package.json .
+COPY package.json .
+COPY tsconfig.json .
 RUN yarn
 COPY . .
 RUN yarn build
 
 FROM node:alpine
 WORKDIR /usr/app
-COPY --from=builder /app/dist .
+ENV NODE_ENV=production
 
-COPY ormconfig.js ./
+COPY package.json .
+RUN yarn
+COPY --from=builder /app/dist .
 
 EXPOSE 4000
 
