--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,5 +26,5 @@
     "baseUrl": "."
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.tsx", "./src/**/*.ts"]
+  "include": ["./src/**/*.tsx", "./src/**/*.ts", "./ormconfig.ts"]
 }
