modified url on client

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-REACT_APP_SERVER_URL_DEVELOPMENT=http://167.172.217.157:3050/graphql
-REACT_APP_SERVER_URL_PRODUCTION=http://167.172.217.157:3050/graphql
-REACT_APP_SERVER_WEBSOCKET_DEVELOPMENT=ws://167.172.217.157:3050/graphql
-REACT_APP_SERVER_WEBSOCKET_PRODUCTION=ws://167.172.217.157:3050/graphql
+REACT_APP_SERVER_URL_DEVELOPMENT=http://localhost/graphql
+REACT_APP_SERVER_URL_PRODUCTION=http://localhost/graphql
+REACT_APP_SERVER_WEBSOCKET_DEVELOPMENT=ws://localhost/graphql
+REACT_APP_SERVER_WEBSOCKET_PRODUCTION=ws://localhost/graphql
