--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -4,13 +4,13 @@ server {
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
-    proxy_pass http://client;
+    proxy_pass http://client:3000;
   }
 
   location /graphql {
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    proxy_pass http://server:4000;
+    proxy_pass http://server:4000/graphql;
   }
 }
