--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -4,7 +4,7 @@ server {
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
-    proxy_pass http://client:3000;
+    proxy_pass http://client;
   }
 
   location /graphql {
