modified configuration of nginx

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   server_name 165.227.1.127;
   location / {
-    root /usr/share/nginx/html;
+    root /var/www/localhost/htdocs;
     index index.html index.htm;
     proxy_pass http://client;
   }
