--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,8 +1,8 @@
 server {
   listen 80;
-  server_name 165.227.1.127;
+
   location / {
-    root /var/www/localhost/htdocs;
+    root /usr/share/nginx/html;
     index index.html index.htm;
     proxy_pass http://client;
   }
