--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,6 +5,6 @@ COPY . .
 RUN yarn && yarn build
 
 FROM nginx:1.17-alpine
-WORKDIR /var/www/localhost/htdocs
+WORKDIR /usr/share/nginx/html
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build .
