--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,6 +5,9 @@ COPY . .
 RUN yarn && yarn build
 
 FROM nginx:1.17-alpine
-WORKDIR /usr/share/nginx/html
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build .
+COPY --from=builder /app/build /usr/share/nginx/html
+
+EXPOSE 3000 80
+
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
