--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:alpine as builder
+FROM nginx:stable-alpine as builder
 WORKDIR /app
 COPY ./package.json .
 COPY . .
 RUN yarn && yarn build
 
-FROM nginx:1.17-alpine
+FROM nginx:stable-alpine
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
 
