--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,14 @@
 FROM node:alpine as builder
 WORKDIR /app
-COPY ./package.json .
+COPY package.json .
+RUN yarn
 COPY . .
-RUN yarn && yarn build
+RUN yarn build
 
-FROM nginx:stable-alpine
+FROM nginx
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
 
-EXPOSE 3000 80
+EXPOSE 80
 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
