--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,13 @@
 FROM node:alpine as builder
 WORKDIR /app
 COPY package.json .
-RUN yarn
+RUN npm install
 COPY . .
-RUN yarn build
+RUN npm run build
 
 FROM nginx
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html/build
 
 EXPOSE 80
 
