--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,16 +2,16 @@ FROM node:alpine as builder
 WORKDIR /app
 COPY package.json .
 COPY tsconfig.json .
-RUN yarn
+RUN npm install
 COPY . .
-RUN yarn build
+RUN npm run build
 
 FROM node:alpine
 WORKDIR /usr/app
 ENV NODE_ENV=production
 
 COPY package.json .
-RUN yarn
+RUN npm install --prod
 COPY --from=builder /app/dist .
 
 EXPOSE 4000
