--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,14 @@
-FROM node:latest as builder
-WORKDIR /app
-COPY package.json .
-RUN npm install
-COPY . .
-RUN npm run build
-
-FROM nginx
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nginx/html/build
-
+FROM alpine
 EXPOSE 80
-
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+ADD nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY . /usr/share/nginx/html
+RUN apk add nginx && \
+    mkdir /run/nginx && \
+    apk add nodejs && \
+    apk add npm && \
+    cd /usr/share/nginx/html && \
+    rm -rf node_modules && \
+    npm install && \
+    npm run build;
+CMD ["/bin/sh", "-c", "exec nginx -g 'daemon off;';"]
+WORKDIR /usr/share/nginx/html
