--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,16 @@
-FROM alpine
+# stage1 - build react app first 
+FROM node:12.16.1-alpine3.9 as build
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
+COPY ./package.json /app/
+RUN yarn --silent
+COPY . /app
+RUN yarn build
+
+# stage 2 - build the final image and copy the react build files
+FROM nginx:1.17.8-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx/default.conf /etc/nginx/conf.d
 EXPOSE 80
-ADD nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY . /usr/share/nginx/html
-RUN apk add nginx && \
-    mkdir /run/nginx && \
-    apk add nodejs && \
-    apk add npm && \
-    cd /usr/share/nginx/html && \
-    rm -rf node_modules && \
-    npm install && \
-    npm run build;
-CMD ["/bin/sh", "-c", "exec nginx -g 'daemon off;';"]
-WORKDIR /usr/share/nginx/html
+CMD ["nginx", "-g", "daemon off;"]
