--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,7 @@
 # stage1 - build react app first 
 FROM node:12.16.1-alpine3.9 as build
 WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
+# ENV PATH /app/node_modules/.bin:$PATH
 COPY ./package.json /app/
 RUN yarn --silent
 COPY . /app
@@ -9,7 +9,7 @@ RUN yarn build
 
 # stage 2 - build the final image and copy the react build files
 FROM nginx:1.17.8-alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html/build
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/default.conf /etc/nginx/conf.d
 EXPOSE 80
