--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,7 +9,8 @@ RUN yarn build
 
 # stage 2 - build the final image and copy the react build files
 FROM nginx:1.17.8-alpine
-COPY --from=build /app/build /usr/share/nginx/html/build
+RUN rm /usr/share/nginx/html/index.html
+COPY --from=build /app/build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/default.conf /etc/nginx/conf.d
 EXPOSE 80
