--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 REACT_APP_SERVER_URL_DEVELOPMENT=http://localhost/graphql
-REACT_APP_SERVER_URL_PRODUCTION=http://localhost/graphql
+REACT_APP_SERVER_URL_PRODUCTION=http://64.225.126.176/graphql
 REACT_APP_SERVER_WEBSOCKET_DEVELOPMENT=ws://localhost/graphql
-REACT_APP_SERVER_WEBSOCKET_PRODUCTION=ws://localhost/graphql
+REACT_APP_SERVER_WEBSOCKET_PRODUCTION=ws://64.225.126.176/graphql
