fixed deploy.sh && added production environment to docker

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,6 +33,8 @@ services:
       - slack
   client:
     image: kokiebisu/slack-client
+    env:
+      - NODE_ENV=production
     networks:
       - slack
 
