fix error on docker-compose

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,7 +33,7 @@ services:
       - slack
   client:
     image: kokiebisu/slack-client
-    env:
+    environment:
       - NODE_ENV=production
     networks:
       - slack
