--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,8 @@
 # stage1 - build react app first 
 FROM node:12.16.1-alpine3.9 as build
 WORKDIR /app
+ARG NODE_ENV
+ENV NODE_ENV=$NODE_ENV
 # ENV PATH /app/node_modules/.bin:$PATH
 COPY ./package.json /app/
 RUN yarn --silent
