--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,6 +22,7 @@ services:
   server:
     image: kokiebisu/slack-server
     environment:
+      - ORIGIN=64.225.126.176
       - NODE_ENV=production
       - HOST=64.225.126.176
       - REDIS_HOST=redis
