--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
+    "@types/draft-js": "^0.10.43",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/react-router": "^5.1.7",
