--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "storyshots": "npx test storybook.test.js",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
@@ -67,6 +68,7 @@
     "@storybook/addon-actions": "^6.0.16",
     "@storybook/addon-essentials": "^6.0.16",
     "@storybook/addon-links": "^6.0.16",
+    "@storybook/addon-storyshots": "^6.0.16",
     "@storybook/node-logger": "^6.0.16",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.16",
