--- a/client/package.json
+++ b/client/package.json
@@ -78,6 +78,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/styled-components": "^5.1.0",
     "@types/styled-system": "^5.1.9",
     "babel-loader": "^8.1.0",
