--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.42",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-theming": "^2.2.5",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -21,6 +22,7 @@
     "framer-motion": "^1.11.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
@@ -30,6 +32,7 @@
     "styled-components": "^5.1.0",
     "styled-normalize": "^8.0.7",
     "styled-system": "^5.1.5",
+    "styled-theming": "^2.2.0",
     "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.9.6"
   },
