--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "styled-system": "^5.1.5",
     "styled-theming": "^2.2.0",
     "subscriptions-transport-ws": "^0.9.16",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "babel-loader": "8.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
