--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.22",
@@ -18,6 +18,7 @@
     "apollo-link-token-refresh": "^0.3.1",
     "apollo-link-ws": "^1.0.20",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "8.1.0",
     "draft-js": "^0.11.6",
     "framer-motion": "^1.11.0",
     "graphql": "^15.0.0",
@@ -34,8 +35,7 @@
     "styled-system": "^5.1.5",
     "styled-theming": "^2.2.0",
     "subscriptions-transport-ws": "^0.9.16",
-    "typescript": "^3.9.6",
-    "babel-loader": "8.0.4"
+    "typescript": "^3.9.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -71,6 +71,7 @@
     "@storybook/addon-actions": "^6.1.1",
     "@storybook/addon-essentials": "^6.1.1",
     "@storybook/addon-links": "^6.1.1",
+    "@storybook/addon-storyshots": "^6.1.1",
     "@storybook/node-logger": "^6.1.1",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.1",
