--- a/server/package.json
+++ b/server/package.json
@@ -13,23 +13,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.16",
     "@types/cors": "^2.8.9",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.13",
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.1",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.12.2",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
     "ioredis": "^4.19.2",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
