--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "apollo-boost": "^0.4.9",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
     "apollo-link-token-refresh": "^0.3.2",
-    "apollo-link-ws": "^1.0.20",
     "framer-motion": "^3.1.4",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
@@ -63,6 +59,7 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.11",
     "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.7"
+    "@types/styled-components": "^5.1.7",
+    "@types/styled-system": "^5.1.10"
   }
 }
