--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 
 before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker build -t kokiebisu/slack-test -f ./client/dev.Dockerfile ./client
+  - docker build -t kokiebisu/slack-test -f ./web/dev.Dockerfile ./client
 
 script:
   - docker run -e CI=true kokiebisu/slack-test yarn test
