--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token mm219cnriw"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +62,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@types/styled-system": "^5.1.10",
+    "chromatic": "^5.5.0",
     "webpack": "4.44.2"
   },
   "resolutions": {
