feat: created basic structure of text editor

--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "apollo-link-token-refresh": "^0.3.2",
     "babel-loader": "8.1.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^3.1.4",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
@@ -59,6 +60,8 @@
     "@storybook/node-logger": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.11",
+    "@types/draft-js": "^0.10.44",
+    "@types/quill": "^2.0.4",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@types/styled-system": "^5.1.10",
